# gc-arrays-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  OmrConfig.cmake  README.md  api-reference.md  main.cpp  making_an_object_model.pptx  slides.pptx  worksheet.md
glue/: CMakeLists.txt
glue/include/: ObjectAllocationModel.hpp  ObjectModel.hpp  ObjectModelDelegate.hpp  StartupManagerImpl.hpp  objectdescription.h
glue/src/: CollectorLanguageInterfaceImpl.cpp  ConcurrentMarkingDelegate.cpp  ObjectModelDelegate.cpp
include/OMRClient/GC/: ObjectModelDelegate.hpp  ObjectRef.hpp  ObjectScanner.hpp
include/Splash/: Allocators.hpp  ArrayScanner.hpp  Arrays.hpp  Barriers.hpp
